--- a/2.css
+++ b/2.css
@@ -60,7 +60,10 @@
     display: flex;
     justify-content: space-around;
     background-color:#bb141e;
-    padding: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 30px;
+    padding-top: 30px;
 }
 .navbar a {
     color: white;
