--- a/2.css
+++ b/2.css
@@ -62,8 +62,9 @@
     background-color:#bb141e;
     padding: 10px;
 }
-.navbar a {
+.navbar button {
     color: white;
+    background-color: #bb141e;
     text-decoration: none;
     padding: 14px 20px;
     transition: background-color 0.3s;
